# graphql-api-example

./: .env.example  Cargo.toml  README.md
.github/workflows/: main.yml
migrations/: 20210828135200_create_todos.sql
src/: context.rs  main.rs
src/graphql/: mod.rs
src/graphql/mutation/: mod.rs
src/graphql/query/: mod.rs
src/graphql/types/: status.rs  todo.rs  user.rs
src/model/: id.rs  mod.rs  status.rs  todo.rs  user.rs
src/types/: mod.rs  result.rs
