[package]
name = "graphql-api-example"
version = "0.1.0"
authors = ["Peter Stuart <peter@peterstuart.org>"]
edition = "2018"

[dependencies]
anyhow = "1.0.45"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.17"
juniper = "0.15.7"
juniper_codegen = "0.15.7"
juniper_warp = "0.7.0"
log = "0.4.14"
serde_json = "1.0.70"
sqlx = { version = "0.5.9", features = ["runtime-tokio-native-tls", "postgres", "macros", "migrate"] }
tokio = { version = "1.13.0", features = ["full"] }
warp = "0.3.2"
